[package]
name = "compactor"
description = "A collection which compresses old data"
version = "0.2.0"
edition = "2024"
authors = ["Alex Sayers <alex@asayers.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/compactor"

[dependencies]
chrono = { version = "0.4", optional = true }
jiff = "0.2.12"
linearize = { version = "0.1.4", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "jiff/serde"]
chrono = ["dep:chrono"]
jiff = [] # We actually need the jiff dep either way, for date arithmetic
